--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.6.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 Jan 2015 14:11:37 +0100
+
 solid (5.5.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
