--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-solid (5.6.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.6.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 Jan 2015 14:11:37 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 06 Jan 2015 20:12:45 +0100
 
 solid (5.5.0-0ubuntu1) vivid; urgency=medium
 
