--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-solid (5.2.0-0ubuntu2) UNRELEASED; urgency=medium
+solid (5.6.0-1~) UNRELEASED; urgency=medium
 
+  [ Harald Sitter ]
   * Do not build depend on qt5-default, we only need qtbase5-dev
 
- -- Harald Sitter <apachelogger@kubuntu.org>  Tue, 30 Sep 2014 10:35:19 +0200
+  [ Maximiliano Curia ]
+  * New upstream release (5.6.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 24 Jan 2015 18:04:27 +0100
 
 solid (5.2.0-0ubuntu1) utopic; urgency=medium
 
