--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ solid (5.6.0-1~) UNRELEASED; urgency=medium
 
   [ Maximiliano Curia ]
   * New upstream release (5.6.0).
+  * Bump build dependencies to build against the experimental versions.
 
  -- Maximiliano Curia <maxy@debian.org>  Sat, 24 Jan 2015 18:04:27 +0100
 
