--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ solid (5.6.0-1~) UNRELEASED; urgency=medium
   * Bump build dependencies to build against the experimental versions.
   * Bump Standards-Version to 3.9.6, no changes needed.
   * Update install files.
+  * Update build dependencies to follow cmake.
 
  -- Maximiliano Curia <maxy@debian.org>  Sat, 24 Jan 2015 18:04:27 +0100
 
