--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ solid (5.6.0-1~) UNRELEASED; urgency=medium
   * Bump Standards-Version to 3.9.6, no changes needed.
   * Update install files.
   * Update build dependencies to follow cmake.
+  * Update copyright information.
 
  -- Maximiliano Curia <maxy@debian.org>  Sat, 24 Jan 2015 18:04:27 +0100
 
