--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ solid (5.6.0-1~) UNRELEASED; urgency=medium
   * Update install files.
   * Update build dependencies to follow cmake.
   * Update copyright information.
+  * Add basic autopkgtests support.
 
  -- Maximiliano Curia <maxy@debian.org>  Sat, 24 Jan 2015 18:04:27 +0100
 
