--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-solid (5.6.0-1~) UNRELEASED; urgency=medium
+solid (5.6.0-1) experimental; urgency=medium
 
   [ Harald Sitter ]
   * Do not build depend on qt5-default, we only need qtbase5-dev
@@ -12,7 +12,7 @@ solid (5.6.0-1~) UNRELEASED; urgency=medium
   * Update copyright information.
   * Add basic autopkgtests support.
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 24 Jan 2015 18:04:27 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 24 Jan 2015 18:57:50 +0100
 
 solid (5.2.0-0ubuntu1) utopic; urgency=medium
 
