--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.7.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Harald Sitter <sitter@kde.org>  Mon, 09 Feb 2015 10:06:52 +0100
+
 solid (5.6.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
