--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-solid (5.7.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.7.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Harald Sitter <sitter@kde.org>  Mon, 09 Feb 2015 10:06:52 +0100
+ -- Harald Sitter <sitter@kde.org>  Tue, 10 Feb 2015 16:51:02 +0100
 
 solid (5.6.0-0ubuntu1) vivid; urgency=medium
 
