--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-solid (5.7.0-1~) UNRELEASED; urgency=medium
+solid (5.7.0-1) experimental; urgency=medium
 
   * New upstream release (5.7.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 24 Feb 2015 17:40:29 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 04 Mar 2015 17:45:34 +0100
 
 solid (5.7.0-0ubuntu1) vivid; urgency=medium
 
