--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-solid (5.8.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.8.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 13 Mar 2015 20:57:14 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 17 Mar 2015 15:46:36 +0100
 
 solid (5.7.0-0ubuntu1) vivid; urgency=medium
 
