--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.9.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Apr 2015 11:10:54 -0700
+
 solid (5.8.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
