--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-solid (5.9.0-1~) UNRELEASED; urgency=medium
+solid (5.9.0-1) experimental; urgency=medium
 
   * New upstream release (5.9.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 16 Apr 2015 10:25:05 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 23 Apr 2015 08:25:31 +0200
 
 solid (5.9.0-0ubuntu1) vivid; urgency=medium
 
