--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-solid (5.10.0-1~) UNRELEASED; urgency=medium
+solid (5.10.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Maximiliano Curia ]
   * New upstream release (5.10.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 11 May 2015 12:20:09 +0200
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 27 May 2015 17:09:28 +0200
 
 solid (5.9.0-1) experimental; urgency=medium
 
