--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-solid (5.10.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.10.0-0ubuntu1) wily; urgency=medium
 
   [ Maximiliano Curia ]
   * New upstream release (5.10.0).
@@ -6,7 +6,7 @@ solid (5.10.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Jonathan Riddell ]
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 27 May 2015 17:09:28 +0200
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 03 Jun 2015 21:03:54 +0200
 
 solid (5.9.0-1) experimental; urgency=medium
 
