--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-solid (5.11.0-1~) UNRELEASED; urgency=medium
+solid (5.11.0-1) unstable; urgency=medium
 
   * New upstream release (5.10.0).
   * New upstream release (5.11.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 25 Jun 2015 15:36:03 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 26 Jun 2015 17:04:16 +0200
 
 solid (5.9.0-1) experimental; urgency=medium
 
