--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-solid (5.12.0-1~) UNRELEASED; urgency=medium
+solid (5.12.0-1) unstable; urgency=medium
 
   * New upstream release (5.12.0).
   * Update symbols files for gcc5 compatibility. (Closes: #791738)
     Thanks to Martin Michlmayr
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 07 Jul 2015 17:37:49 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 09 Jul 2015 12:43:16 +0200
 
 solid (5.11.0-1) unstable; urgency=medium
 
