--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,7 @@ solid (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
     building with GCC 5
 
   [ Scarlett Clark ]
-  * vivid backport 
+  * Remove misplaced backport.
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Jul 2015 08:32:01 -0700
 
