--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-solid (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.12.0-0ubuntu1) wily; urgency=medium
 
   [ Scarlett Clark ]
   * New upstream release
@@ -10,7 +10,7 @@ solid (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Scarlett Clark ]
   * Remove misplaced backport.
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Jul 2015 08:32:01 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 03 Aug 2015 16:12:31 +0200
 
 solid (5.11.0-1) unstable; urgency=medium
 
