--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-solid (5.13.0-1~) UNRELEASED; urgency=medium
+solid (5.13.0-1) unstable; urgency=medium
 
   * New upstream release (5.13.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 27 Aug 2015 15:23:47 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 27 Aug 2015 18:35:57 +0200
 
 solid (5.12.0-1) unstable; urgency=medium
 
