--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.14.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.14.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 14 Sep 2015 00:25:09 +0200
+
 solid (5.13.0-1) unstable; urgency=medium
 
   * New upstream release (5.13.0).
