Removed private classes from exported symbols.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 solid (5.14.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (5.14.0).
+  * Removed private classes from exported symbols.
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 14 Sep 2015 00:25:09 +0200
 
