--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-solid (5.14.0-1~) UNRELEASED; urgency=medium
+solid (5.14.0-1) unstable; urgency=medium
 
   * New upstream release (5.14.0).
   * Removed private classes from exported symbols.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 14 Sep 2015 00:25:09 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 15 Sep 2015 13:48:35 +0200
 
 solid (5.13.0-1) unstable; urgency=medium
 
