--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.14.0-2~) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 18 Sep 2015 13:23:14 +0200
+
 solid (5.14.0-1) unstable; urgency=medium
 
   * New upstream release (5.14.0).
