--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.15.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.15.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 05 Oct 2015 15:05:17 +0200
+
 solid (5.14.0-2) unstable; urgency=medium
 
   * Move auto test to autopkgtests.
