--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-solid (5.14.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.15.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Scarlett Clark ]
   * Vivid backport
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 29 Sep 2015 17:18:47 -0700
+  [ Jonathan Riddell ]
+  * new upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 Oct 2015 21:31:38 +0100
 
 solid (5.14.0-0ubuntu1) wily; urgency=medium
 
