--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-solid (5.15.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.15.0-0ubuntu1) wily; urgency=medium
 
   [ Scarlett Clark ]
   * Vivid backport
@@ -6,7 +6,7 @@ solid (5.15.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Jonathan Riddell ]
   * new upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 Oct 2015 21:31:38 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 07 Oct 2015 14:00:21 +0100
 
 solid (5.14.0-0ubuntu1) wily; urgency=medium
 
