--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-solid (5.15.0-1~) UNRELEASED; urgency=medium
+solid (5.15.0-1) unstable; urgency=medium
 
   * New upstream release (5.15.0).
   * Update symbols files from buildds logs (5.14.0-2).
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 05 Oct 2015 15:05:17 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 09 Oct 2015 19:16:09 +0200
 
 solid (5.14.0-2) unstable; urgency=medium
 
