--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-solid (5.16.0-1~) UNRELEASED; urgency=medium
+solid (5.16.0-1) unstable; urgency=medium
 
   * New upstream release (5.16.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 17 Nov 2015 11:44:04 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 30 Nov 2015 12:12:58 +0100
 
 solid (5.15.0-1) unstable; urgency=medium
 
