--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.17.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.17.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 07 Dec 2015 14:17:38 +0100
+
 solid (5.16.0-1) unstable; urgency=medium
 
   * New upstream release (5.16.0).
