New upstream release (5.18.0).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-solid (5.17.0-1~) UNRELEASED; urgency=medium
+solid (5.18.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (5.17.0).
+  * New upstream release (5.18.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 07 Dec 2015 14:17:38 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 19 Jan 2016 20:57:57 +0100
 
 solid (5.16.0-1) unstable; urgency=medium
 
