--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-solid (5.18.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.18.0-0ubuntu1) xenial; urgency=medium
 
   [ Scarlett Clark ]
   * Debian merge. No remaining changes. 
