--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.19.0-2~) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 24 Feb 2016 06:40:14 +0100
+
 solid (5.19.0-1) experimental; urgency=medium
 
   * New upstream release (5.19.0).
