--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 solid (5.19.0-2~) UNRELEASED; urgency=medium
 
-  * 
+  * Add missing build dependency.
 
  -- Maximiliano Curia <maxy@debian.org>  Wed, 24 Feb 2016 06:40:14 +0100
 
