--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-solid (5.19.0-2~) UNRELEASED; urgency=medium
+solid (5.19.0-2) experimental; urgency=medium
 
   * Add missing build dependency.
   * Bump Standards-Version to 3.9.7, no changes needed.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 24 Feb 2016 06:40:14 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 24 Feb 2016 07:18:31 +0100
 
 solid (5.19.0-1) experimental; urgency=medium
 
