--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.21.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release, xenial backport. 
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 26 Apr 2016 14:42:02 -0700
+
 solid (5.18.0-0ubuntu1) xenial; urgency=medium
 
   [ Scarlett Clark ]
