--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
-solid (5.22.0-1~1.gbpda63d4) UNRELEASED; urgency=medium
+solid (5.22.0-1) unstable; urgency=medium
 
-  ** SNAPSHOT build @da63d41cdcea46365ce9882c6f6501db51d8db51 **
-
+  [ Automatic packaging ]
   * Update build-deps and deps with the info from cmake
 
- -- Automatic packaging <maxy+jenkins@gnuservers.com.ar>  Sun, 15 May 2016 15:57:29 +0200
+  [ Maximiliano Curia ]
+  * Add new patch: use_shortest_filepath.diff
+
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 18 May 2016 23:50:32 +0200
 
 solid (5.21.0-1) experimental; urgency=medium
 
