--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-solid (5.27.0-1~1.gbp8214d7) UNRELEASED; urgency=medium
+solid (5.27.0-1) unstable; urgency=medium
 
-  ** SNAPSHOT build @8214d70bdc1c1b83fd4604b4f170cac5d12ad43f **
-
+  [ Automatic packaging ]
   * Update build-deps and deps with the info from cmake
 
- -- Automatic packaging <maxy+jenkins@gnuservers.com.ar>  Sat, 08 Oct 2016 15:57:46 +0200
+  [ Maximiliano Curia ]
+  * New upstream release (5.27)
+  * Bump group breaks (5.27)
+
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 15 Oct 2016 16:58:07 +0200
 
 solid (5.26.0-1) unstable; urgency=medium
 
