--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+solid (5.28.0-3~) UNRELEASED; urgency=medium
+
+  * Pick "Work round DBus property fetching bug" (6f1c6dc)
+    Workaround for a qt5 dbus property issue.
+    Add upstream patch as: Work-round-DBus-property-fetching-bug.patch
+    This fixes KDE#345871
+  * Pick "[UDisks 2 Device] Add description for Floppy Disk" (d92588b)
+    Floppy disks now show up as "Floppy Disk" instead of "0 B Removable
+    Media"
+    Add upstream patch as:
+     UDisks-2-Device-Add-description-for-Floppy-Disk.patch
+
+ -- Maximiliano Curia <maxy@gnuservers.com.ar>  Sat, 08 Apr 2017 19:32:08 +0200
+
 solid (5.28.0-2) unstable; urgency=medium
 
   * Add patch: fix-FTBFS-on-mipsel-and-m68k-src-solid-predicate_parser.c.patch.
