--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.35.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.35.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 26 Jun 2017 17:44:21 +0200
+
 solid (5.28.0-4) unstable; urgency=medium
 
   * Team upload.
