--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,21 @@
-solid (5.35.0-1~) UNRELEASED; urgency=medium
+solid (5.35.0-1~1) UNRELEASED; urgency=medium
 
+  [ Maximiliano Curia ]
   * New upstream release (5.35.0).
+  * Bump Standards-Version to 4.0.0.
+  * Update build-deps and deps with the info from cmake
+  * Bump group breaks (5.35)
+  * Drop upstream patches
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 26 Jun 2017 17:44:21 +0200
+  [ Harald Sitter ]
+  * promote media-player-info from suggests to recommends
+  * acc c++11. now used more liberally
+
+  [ Raymond Wooninck ]
+  * Add signing key
+  * also include signing-key
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 06 Jul 2017 15:41:18 +0200
 
 solid (5.28.0-4) unstable; urgency=medium
 
