Update changelog for 5.36.0-1 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-solid (5.36.0-1~) UNRELEASED; urgency=medium
+solid (5.36.0-1) experimental; urgency=medium
 
   [ Maximiliano Curia ]
   * New upstream release (5.35.0).
@@ -8,6 +8,9 @@ solid (5.36.0-1~) UNRELEASED; urgency=medium
   * Drop upstream patches
   * watch: Use https uris
   * New upstream release (5.36.0).
+  * Bump group breaks (5.36)
+  * Update build-deps and deps with the info from cmake
+  * Drop upstream applied patch: cmake-build-udisks2-backend-on-FreeBSD-only-when-ena.patch
 
   [ Harald Sitter ]
   * promote media-player-info from suggests to recommends
@@ -17,7 +20,7 @@ solid (5.36.0-1~) UNRELEASED; urgency=medium
   * Add signing key
   * also include signing-key
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 08 Jul 2017 13:41:04 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 09 Jul 2017 23:41:34 +0200
 
 solid (5.28.0-4) unstable; urgency=medium
 
