--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.37.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.37.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 14 Aug 2017 13:15:28 +0200
+
 solid (5.36.0-1) experimental; urgency=medium
 
   [ Maximiliano Curia ]
