--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-solid (5.37.0-1~) UNRELEASED; urgency=medium
+solid (5.37.0-1) experimental; urgency=medium
 
   * New upstream release (5.37.0).
+  * Update build-deps and deps with the info from cmake
+  * Bump group breaks (5.37)
+  * Add a libkf5solid-doc package for the qch files
+  * Bump Standards-Version to 4.0.1.
+  * Set Priority to optional
+  * Set section for the doc package
+  * Release to experimental
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 14 Aug 2017 13:15:28 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Aug 2017 10:42:32 +0200
 
 solid (5.36.0-1) experimental; urgency=medium
 
